# OpenGLDemos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
OpenGLDemos/: CMakeLists.txt  OpenGLDemos.cpp  OpenGLDemos.h
OpenGLDemos/GLDemo-Core/: GLCore.h
OpenGLDemos/GLDemo-Core/IndexBuffer/: DynamicIndexBuffer.cpp  DynamicIndexBuffer.h  IndexBuffer.cpp  IndexBuffer.h  StaticIndexBuffer.cpp  StaticIndexBuffer.h
OpenGLDemos/GLDemo-Core/Logger/: Log.cpp  Log.h  OpenGLDebug.cpp
OpenGLDemos/GLDemo-Core/Renderer/: Renderer.cpp  Renderer.h
OpenGLDemos/GLDemo-Core/Shader/: Shader.cpp  Shader.h
OpenGLDemos/GLDemo-Core/VertexArray/: VertexArray.cpp  VertexArray.h
OpenGLDemos/GLDemo-Core/VertexBuffer/: DynamicVertexBuffer.cpp  DynamicVertexBuffer.h  StaticVertexBuffer.cpp  StaticVertexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
OpenGLDemos/GLDemo-Core/VertexBufferLayout/: VertexBufferLayout.h
OpenGLDemos/GLDemo-Core/include/: Core.h  OpenGLDebug.h
OpenGLDemos/GLDemo-Core/src/: Core.cpp
OpenGLDemos/GLDemo-Util/include/: Scene.h
OpenGLDemos/Scenes/BatchRendering/: BatchRendering.cpp  BatchRendering.h
OpenGLDemos/Scenes/BatchRendering/res/: fragment.shader.glsl  vertex.shader.glsl
OpenGLDemos/Scenes/ClearColor/: ClearColor.cpp  ClearColor.h
OpenGLDemos/Scenes/MainMenu/: MainMenu.cpp  MainMenu.h
OpenGLDemos/Scenes/Squares/: Squares.cpp  Squares.h
OpenGLDemos/Scenes/res/: batchrendering.fragment.glsl  batchrendering.vertex.glsl  squares.fragment.glsl  squares.vertex.glsl
